Add announcement about Xtensa port. Add Xtensa processor to the list in readings.html.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -153,6 +153,14 @@ and automated testers</a> to maintain and improve quality.
 
 <dl>
 
+<dt><b>January 24, 2002</b></dt>
+<dd>
+<a href="http://www.tensilica.com/">Tensilica</a> has contributed 
+a port to the configurable and extensible
+<a href="http://www.tensilica.com/technology.html">Xtensa microprocessor
+architecture</a>.
+</dd>
+
 <dt><b>January 8, 2002</b></dt>
 <dd>
  <a href="http://www.suse.com">SuSE Labs</a> developers Jan Hubicka, Bo
