--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -317,6 +317,10 @@ tahoe. These are listed here just for completeness.
   <br /><a href="http://cua6.csuohio.edu/~bob/3b2faq.html">AT&amp;T 3B2 FAQ</a>
  </li>
  
+ <li>xtensa
+  <br />Manufacturer: <a href="http://www.tensilica.com">Tensilica</a>
+ </li>
+
 </ul>
 
 
