We do not need to deal with separate announcement pages for minor releases any longer.

--- a/htdocs/releasing.html
+++ b/htdocs/releasing.html
@@ -9,11 +9,8 @@
 
 <ol>
 <li>Before rolling the release, update the release notes web pages and
-ensure that they are all listed in <code>contrib/gennews</code>.  If
-using separate announcement pages for each minor release, as with GCC
-2.95, a new release announcement page such as
-<code>gcc-2.95/gcc-2.95.4.html</code> should be created to describe
-the changes in the release.  If using an overall announcement page for
+ensure that they are all listed in <code>contrib/gennews</code>.
+If using an overall announcement page for
 successive minor releases, as with GCC 3.0, this should note the new
 release without removing information about any previous minor releases
 in that series, and the <code>features.html</code> page for that
