Add entry for alpha-dec-osf5.1 for 3.0.3.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -32,7 +32,8 @@ archived mail messages that reported the builds.</p>
 <td>alpha-dec-osf5.1</td>
 <td>&nbsp;</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00421.html">3.0</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00421.html">3.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg01705.html">3.0.3</a></td>
 </tr>
 
 <tr>
