Make markup XHTML 1.0 compliant. Fix a minor pasto in features.html. By Andrea 'Fyre Wyzard' Bocci <fwyzard@inwind.it>.

--- a/htdocs/gcc-2.95/branch.html
+++ b/htdocs/gcc-2.95/branch.html
@@ -8,34 +8,36 @@
 <h1>GCC 2.95 branch</h1>
 
 <p>We have made a branch in the source tree for GCC 2.95.  Depending on your
-situation you have three choices for handling your CVS tree.
+situation you have three choices for handling your CVS tree.</p>
 <ol>
   <li> Do nothing.  Your existing CVS tree will continue to track the mainline
-       gcc sources.
+       gcc sources.</li>
   <li> Track just the GCC 2.95 release.  You can convert your existing CVS tree
        to track the GCC 2.95 release with the command:
-       <br><tt>cvs update -rgcc-2_95-branch</tt>
+       <br />
+       <tt>cvs update -rgcc-2_95-branch</tt></li>
   <li> Track both the GCC 2.95 release and the development sources.  You will
        need to check out the GCC 2.95 release in a separate directory using the
        command:
-       <br><tt>cvs co -rgcc-2_95-branch egcs</tt>
+       <br />
+       <tt>cvs co -rgcc-2_95-branch egcs</tt></li>
 </ol>
 
 <p>Considering that the primary focus of the developers is on the GCC 2.95
-release, option #2 or #3 is recommended.
+release, option #2 or #3 is recommended.</p>
 
 <p>FTP snapshots will track the GCC 2.95 release only.  After GCC 2.95 is
-released, snapshots will return to tracking the mainline sources.
+released, snapshots will return to tracking the mainline sources.</p>
 
-<hr>
+<hr />
 <p>All patches for the GCC 2.95 release branch must be approved by the
-release coordinator (Jeff Law).
+release coordinator (Jeff Law).</p>
 
-<p>We are only accepting bugfix patches for the GCC 2.95 release.
+<p>We are only accepting bugfix patches for the GCC 2.95 release.</p>
 
 <p>You can still submit patches for the mainline GCC sources.  However,
 responses to such patches may be delayed due to the focus on the GCC 2.95
-release.
+release.</p>
 
 </body>
 </html>
