--- a/htdocs/gcc-2.95/othertest.html
+++ b/htdocs/gcc-2.95/othertest.html
@@ -12,8 +12,8 @@
 <p> In addition to regression testing it is important to perform tests
 on larger software packages.  The key packages used for GCC 2.95 testing
 are the Linux kernel, GNU C library, RedHat 6.0 sources and the LAPACK
-library.
-<p>
+library.</p>
+
 <table border="0">
 <tr>
 <th>
@@ -63,7 +63,7 @@ N/A
 N/A
 </td>
 <td>
--O2 OK<br>
+-O2 OK<br />
 -O3 -funroll-loops fails
 </td>
 </tr>
@@ -180,11 +180,11 @@ UNTESTED
 
 <p>Note the linux kernel, modules and related code must be compiled
 with -fno-strict-aliasing as the linux kernel violates ANSI/ISO C standards
-used to perform type based alias analysis.
+used to perform type based alias analysis.</p>
 
 <p>GCC 2.95 has known bugs accessing complex values on 64bit targets.  This
 particularly effects Fortran code (such as lapack) on Alphas, MIPS potentially
-other 64bit platforms.
+other 64bit platforms.</p>
 
 </body>
 </html>
