--- a/htdocs/gcc-2.95/schedule.html
+++ b/htdocs/gcc-2.95/schedule.html
@@ -10,74 +10,76 @@
 <p> It was recently announced that the EGCS project would be taking over
 maintenance of GCC.  To help reinforce this change in maintainership and
 take one of the (many) steps needed to be the GCC maintainers the next
-major release from the EGCS project will be GCC 2.95 (instead of EGCS 1.2).
+major release from the EGCS project will be GCC 2.95 (instead of EGCS 1.2).</p>
 
 <p> After GCC 2.95 is branched/released the remaining changes from the old FSF
 gcc2 tree will be merged into the EGCS development tree and the old FSF gcc2
 tree will be considered officially dead.  That way none of the work on the
 old FSF gcc2 tree will be lost.  We chose not to merge in that code now 
 because it would have introduced a significant delay in the GCC 2.95 release.
+</p>
 
 <p> We will start the GCC 3.0 release cycle once the remaining pieces of the new
 C++ ABI and the libstdc++ rewrite are complete.  I also hope that we will have
-an integrated Ada and/or Pascal compilers by then.
+an integrated Ada and/or Pascal compilers by then.</p>
 
 
 <p>This page is meant to provide information about the current schedule
 for GCC 2.95, the <a href="regress.html">testing/release criteria</a>
 for GCC 2.95, <a href="features.html">new features</a> to be found in
-GCC 2.95, etc.
+GCC 2.95, etc.</p>
 
 <p> We are still wrapping up some issues for the GCC 2.95 release.  We have
 fallen somewhat behind the original schedule due to various reasons.  Hopefully
-we will not have to slip the schedule further.
+we will not have to slip the schedule further.</p>
 
-<p>The updated tentative schedule for the GCC 2.95 release is:
+<p>The updated tentative schedule for the GCC 2.95 release is:</p>
 
 <ul>
   <li> <b>April 21, 1999. Feature freeze date</b>.
   <p>All new features, optimizations, etc need to be <i>submitted</i> by
   this date.  It is likely that not all submissions will be accepted
   for EGCS 1.2.  But all submissions need to be made available for evaluation
-  by April 21, 1999.
+  by April 21, 1999.</p>
 
   <p> We will try to get all accepted patches installed into the code base
-  as quickly as possible after the feature freeze date.
+  as quickly as possible after the feature freeze date.</p>
 
   <p> After April 21, 1999, only bugfix submissions will be considered for
-  the GCC 2.95 release.
+  the GCC 2.95 release.</p>
 
   <p> By April 21, 1999, we also want to have a testing plan and release
-  criteria in place.
+  criteria in place.</p></li>
 
-  <p><li> <b>May 17, 1999. Branch Creation & Testing</b>.
+  <li> <b>May 17, 1999. Branch Creation &amp; Testing</b>.
   <p> The GCC 2.95 branch was created on May 17, 1999 and snapshots will
   occur from the GCC 2.95 branch instead of the mainline sources.  The
   <a href="branch.html">GCC 2.95 branch page</a> has information about
-  how to check out the GCC 2.95 branch.
+  how to check out the GCC 2.95 branch.</p>
 
   <p> By May 17, 1999 it is hoped that all new features, optimizations, etc
-  slated for the GCC 2.95 release have been installed into the source tree.
+  slated for the GCC 2.95 release have been installed into the source tree.</p>
 
   <p> Wide scale, release focused testing should start on or before May 17.
+  </p></li>
 
-  <p> <li> <b>June 22, 1999. Critical Bug Freeze Date</b>.
+  <li> <b>June 22, 1999. Critical Bug Freeze Date</b>.
   <p>June 2, 1999 is updated the target date for freezing the sources.  After
   this date only critical bugfixes will be accepted for inclusion in GCC 2.95
-  (original critical bugfreeze date was June 15, 1999).
+  (original critical bugfreeze date was June 15, 1999).</p></li>
 
-  <p> <li> <b>July 8, 1999. Tentative Release date</b>.
+  <li> <b>July 8, 1999. Tentative Release date</b>.
   <p>July 8, 1999 is the updated target date for the actual release
-  (original date was July 1, 1999).
+  (original date was July 1, 1999).</p></li>
 </ul>
 
 
 <p> We are also looking for one or more volunteers to help coordinate the
-regression testing effort and major software testing.
+regression testing effort and major software testing.</p>
 
 <p> More information on regression testing, release criteria, new features
 will hopefully start to appear soon as well as updated on the issues mentioned
-in the list above.
+in the list above.</p>
  
 </body>
 </html>
