Update information on ftp.mpi-sb.mpg.de mirror site.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -34,7 +34,7 @@ sites</a>.</p>
 <li>France: <a href="ftp://ftp.grolier.fr/pub/egcs/">ftp.grolier.fr</a></li>
 <li>Germany (Berlin): <a href="ftp://ftp.fu-berlin.de/unix/languages/egcs/">ftp.fu-berlin.de</a>, thanks to <a href="mailto:leitner@math.fu-berlin.de">Felix von Leitner</a>!</li>
 <li>Germany: <a href="ftp://ftp.gwdg.de/pub/cygnus/egcs/">ftp.gwdg.de</a></li>
-<li>Germany: <a href="ftp://ftp.mpi-sb.mpg.de/pub/gnu/mirror/egcs.cygnus.com/pub/gcc/">ftp.mpi-sb.mpg.de</a></li>
+<li>Germany: <a href="ftp://ftp.mpi-sb.mpg.de/pub/gnu/mirror/gcc.gnu.org/pub/gcc/">ftp.mpi-sb.mpg.de</a></li>, thanks to <a href="mailto:ftpadmin@mpi-sb.mpg.de">ftpadmin</a>
 <li>Greece: <a href="ftp://ftp.ntua.gr/pub/gnu/egcs/">ftp.ntua.gr</a>,</li>
 <li>Japan: <a href="ftp://ftp.dti.ad.jp/pub/lang/egcs/">ftp.dti.ad.jp</a>, thanks to <a href="mailto:ftp-admin@dti.ad.jp">IWAIZAKO Takahiro</a>!</li>
 <li>Japan: <a href="ftp://ftp.eos.hokudai.ac.jp/pub/egcs/">ftp.eos.hokudai.ac.jp</a></li>
