--- a/htdocs/java/old-news.html
+++ b/htdocs/java/old-news.html
@@ -234,7 +234,7 @@ The new <a href="projects.html">GCJ Projects</a> page is brought online.
 <b>April 10, 2000</b>
 </td><td>
 Warren Levy checked in a JDK 1.1 compatible version of
-<a href="http://www.classpath.org">Classpath's</a> <code>java.sql</code>.
+<a href="http://www.gnu.org/software/classpath/">Classpath's</a> <code>java.sql</code>.
 Once we have merged the necessary JDK 1.2 support, we'll update
 this to directly track Classpath.
 </td></tr>
